# simulation

./: CNAME  Cargo.toml  flake.nix  index.html  simulation-89c11a2ba7e4231cb355f8907ed16b162e4397fcba5408f8f4d8bf1284a2f07ec031bb90d299affd1421ccd0b43bcfa5.js  simulation-89c11a2ba7e4231cb355f8907ed16b162e4397fcba5408f8f4d8bf1284a2f07ec031bb90d299affd1421ccd0b43bcfa5_bg.wasm  trunk.toml
.github/workflows/: pages.yml
src/: lcg  lcg.rs  main.rs  midsquare.rs  server.rs  utils.rs
